--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@mdi/font": "^6.5.95",
         "vue-axios": "^3.4.0",
         "vuetify": "^2.6.3"
     }
